# lab6_slicer_plugin

./: CMakeLists.txt
lab6/: CMakeLists.txt  lab6.py
